fix horizantal scroll and disable  parallax on mobile

--- a/src/components/canvas/index.css
+++ b/src/components/canvas/index.css
@@ -1,9 +1,17 @@
 .parallax-container {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: -1;
   overflow: hidden;
+  background: rgb(54, 38, 133);
+  background: linear-gradient(
+    180deg,
+    rgba(54, 38, 133, 1) 0%,
+    rgba(92, 34, 128, 1) 25%,
+    rgba(125, 30, 129, 1) 50%,
+    rgba(225, 117, 170, 1) 100%
+  );
 }
 
 .parallax-container h1 {
@@ -29,11 +37,12 @@
 .parallax-container img {
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-48%, -50%);
+  pointer-events: none;
   max-width: none;
-  height: 170vh;
+  height: 190vh;
+  transition: 0.5s cubic-bezier(0.2, 0.49, 0.32, 0.99);
 }
-
 
 .parallax-container::after {
   content: "";
@@ -46,7 +55,6 @@
     180deg,
     rgba(255, 255, 255, 0) 0%,
     rgba(5, 8, 22, 1) 100%
-
   );
 }
 
@@ -61,7 +69,6 @@
     text-align: center;
   }
 }
-
 
 /* start outlined text*/
 .front-text {
